<resources>
    <string name="app_name">too-memo</string>

    <string name="home">Home</string>
    <string name="memo">Memo</string>
    <string name="notes">Notes</string>
    <string name="library">Library</string>
    <string name="gallery">Gallery</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="login">Log In</string>

    <string name="topics">Topics</string>

    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>

    <string name="topic_image">Topic Image</string>
    <string name="pin_image">Pin Image</string>
    <string name="more_image">More Image</string>

    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="delete">Delete</string>
</resources>