<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

    </group>
    <item android:title="@string/memo">
        <menu>
            <item
                android:id="@+id/topics"
                android:icon="@drawable/ic_topics"
                android:title="@string/topics" />
            <item
                android:id="@+id/library"
                android:icon="@drawable/ic_library"
                android:title="@string/library"/>
            <item
                android:id="@+id/gallery"
                android:icon="@drawable/ic_gallery"
                android:title="@string/gallery"/>
        </menu>
    </item>
    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_account"
                    android:title="@string/about" />
                <item
                    android:id="@+id/login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/login" />
            </group>
        </menu>
    </item>
</menu>