<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/pinImageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/pin_image"
        app:layout_constraintBottom_toBottomOf="@+id/topicImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_pin" />

    <ImageView
        android:id="@+id/topicImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/topic_image"
        app:layout_constraintStart_toEndOf="@+id/pinImageView"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_image_topic" />

    <TextView
        android:id="@+id/topicNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/topicImageView"
        app:layout_constraintTop_toTopOf="@id/topicImageView"
        tools:text="Gradle" />

    <TextView
        android:id="@+id/createdAtTopicTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:lines="1"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/addTopicImageViewButton"
        app:layout_constraintStart_toStartOf="@id/topicNameTextView"
        app:layout_constraintTop_toBottomOf="@id/topicNameTextView"
        tools:text="created at" />

    <ImageView
        android:id="@+id/addTopicImageViewButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_image"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/notesBorder"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="@color/black_Alpha_200"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topicImageView"
        tools:layout_editor_absoluteX="4dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/notesBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="notesBorder"
        tools:layout_editor_absoluteY="116dp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        app:layout_constraintTop_toBottomOf="@id/notesBarrier" />

</androidx.constraintlayout.widget.ConstraintLayout>